wp-content/themes/make-co/scss/global.scss
html {
	body { 
		.site-container { 
			overflow-y: hidden;
			overflow-x: hidden;
		}
		&.media { overflow: auto; } // overwrite bootstrap
	}
}
.genesis-skip-link { display: none; }
.content-sidebar-wrap {
	margin-top: 20px !important; // has to override, sumome. sorry not sorry
}
.entry-content { padding: 15px 0; }

@media screen and (max-width: 767px) {
	h1, .entry-title { font-size: 2.6em; margin-top: 45px; }
}

.nav-level-2 #menu-secondary_universal_menu{
	.dropdown {
		&:focus { background: #333; }
		a.dropdown-toggle {
			span { 
				padding: 0px;
				padding-right: 5px;
			}
			span.caret {
				padding-right: 0px;
				width: 5px;
				height: 5px;
				margin-right: 20px;
				margin-left: -25px;
			}
		}
		.dropdown-menu {
			background: #333;
			min-width: 125px;
			li { 
				border: 0px;
				&:hover {
					background: #666;
				}
			}
		}
		.dropdown-menu > .active > a, .dropdown-menu > .active > a:focus, .dropdown-menu > .active > a:hover { background-color: #666; }
	}
}

button, input[type="submit"] {
	color: #1987C7;
	border: thin solid #1987C7;
	padding: 10px 30px;
	background-color: #fff;
	&:hover, &:active, &:focus {
		background-color: #1987C7;
		color: #fff;
	}
}

.top15 { 
  margin-top:15px!important;
}
.bottom15 { 
  margin-bottom:15px!important;
}
.left15 { 
  margin-left:15px!important;
}
.right15 { 
  margin-right:15px!important;
}
.padtop { 
  padding-top:15px!important;
}
.padbottom { 
  padding-bottom:15px!important;
}
.padleft { 
  padding-left:15px!important;
}
.padright { 
  padding-right:15px!important;
}
.no-margins {
  margin: 0 !important;
}
.full-width {
  width: 100%;
}
.alignleft {
  float: left;
}

/* 7 Column grid fix */
.seven-cols .col-md-1,
.seven-cols .col-sm-1,
.seven-cols .col-lg-1 {
  width: 14.285714285714285714285714285714%;
  *width: 14.285714285714285714285714285714%;
}

.row {
  display: flex;
  flex-wrap: wrap;
}
.row > [class*=‘col-’] {
  display: flex;
  flex-direction: column;
}

//Youtube Fancybox modal shortcode [youtube-modal]
.fancytube {
  position: relative;
  display: block;
  i {
    color: #fff;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

body.admin-bar {
  .navbar.navbar-fixed-top {
    margin-top: 32px;
  }
  .navbar.navbar-fixed-top.slide-active {
    margin-top: 32px;
  }
  // &.slide-active {
  //   margin-top: 32px;
  // }
}

// Primary Call to Action button
.btn-cyan {
  padding: 8px;
  font-size: 15px;
  line-height: 1em;
  border: none;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  background-color: #1989C7;
  color: #ffffff;
  transition: all 0.15s ease;
  text-align: center;
  &:visited {
    color: #ffffff;
  }
  &:hover, &:focus {
    color: #fff;
    background-color: #4EBEFC;
    transition: all 0.15s ease;
  }
}

.btn-contrast-border {
  border: solid 2px #1989C7;
  margin: 3px;
  color: #333;
  background: #fff;
  font-size: 14px;
  line-height: 14px;
  padding: 3px 12px;
  transition: all 0.15s ease;
  &:visited {
    color: #333;
  }
  &:hover, &:active, &:focus{
    color: white;
    border: solid 2px #4EBEFC;
    background: #4EBEFC;
    transition: all 0.15s ease;
  }
}

.btn-danger {
  border: 0;
  border-bottom: 2px solid #87111f;
  text-transform: uppercase;
  margin-bottom: 15px;
  transition: all 0.15s ease;
  &:visited {
    color: #fff;
  }
  &:hover {
    color: #fff;
    background: #c51a28;
    transition: all 0.15s ease;
  }
  &:focus,
  &.focus,
  &:active,
  &.active,
  .btn-danger .open > .btn-info.dropdown-toggle {
    color: #fff;
    background: #aa1722;
  }
}

.btn-red, .btn-reversed, .btn-blue {
  font-weight: 300;
  padding: 15px 50px;
  font-size: 18px;
  margin-top: 10px;
  line-height: 1em;
  border: none;
  border-radius: 25px;
  background-color: #EA002A;
  color: #ffffff;
  transition: background-color 0.2s;
  display: inline-block;
  &:visited {
    color: #fff;
  }
}
.btn-red:hover, .btn-red:active, .btn-red:focus {
  color: #fff;
  background-color: #FF0000;
  transition: background-color 0.2s;
}
.btn-blue {
	background-color: #2693CB;
}
.btn-blue:hover, .btn-blue:active, .btn-blue:focus {
  color: #fff;
  background-color: #4AC0FB;
  transition: background-color 0.2s;
  text-decoration: underline;
}
.btn-reversed {
    border: solid 1px #ccc;
    background: transparent;
    cursor: default;
    &:hover, &:active, &:focus { color: #fff; }
}
.btn-grey, a.btn-grey:visited {
	border: solid 1px #9B9B9B;
	background: #333;
	color: #fff;
	&:hover, &:focus, &:active {
		color: #333;
		background: #fff;
		border: solid 1px #9B9B9B;
	}
}


.dwnld-btn {
  border: solid 1px #1989C7;
  border-radius: 3px;
  color: #1989C7;
  margin: 3px;
  text-transform: uppercase;
  background: #fff;
  font-size: 20px;
  line-height: 20px;
  padding: 3px 40px;
  position: relative;
  text-align: center;
  transition: all 0.15s ease;
  &:visited, &:hover, &:active, &:focus {
    color: #4EBEFC;
    border-color: #4EBEFC;
    transition: all 0.15s ease;
  }
  &:after {
    font-family: FontAwesome;
    content: "\f019";
    position: absolute;
    right: 8px;
  }
}

.btn.btn-square {
  border-radius: 1px;
}

hr.double-line-hr {
  height: 3px;
  margin-top: 10px;
  margin-bottom: 10px;
  border-top: 2px dotted #ffcc66;
  border-bottom: 3px solid #67bde1;
}


// Youtube responsiveness for Jetpack shortcode
.embed-youtube,
.embed-vimeo,
.googlemaps {
  overflow: hidden;
  padding-bottom: 56.25%;
  margin-bottom: 15px;
  position: relative;
  height: 0;
}

.embed-youtube iframe,
.embed-vimeo iframe,
.googlemaps iframe,
.embed-resp object {
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  position: absolute;
}

//Fancybox modal overrides
.fancybox-close {
  background-image: none !important;
  text-align: center;
  top: 0 !important;
  right: 0 !important;
  &:hover {
    text-decoration: none;
  }
  &:before {
    font-family: FontAwesome;
    content: '\f00d';
    color: #4a4a4a;
    display: inline-block;
    font-size: 18px;
    padding-top: 6px;
  }
}

.fancybox-overlay {
  background: rgba(255, 255, 255, 0.5) !important;
}

